<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		hackgt_8___wtm
	 *	@date 		1635025335591
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_2_xl___2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_google_pixel_2_xl___2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__google_pixel_2_xl___2_ek2"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__google_pixel_2_xl___2_ek2_shape" />

				<View android:id="@+id/rectangle_2_ek1"
					android:background="@drawable/rectangle_2_ek1_shape"
					 android:layout_marginStart="54dp"
					android:layout_marginTop="733dp"
					android:layout_width="303dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_3_ek1"
					android:background="@drawable/rectangle_3_ek1_shape"
					 android:layout_marginStart="54dp"
					android:layout_marginTop="97dp"
					android:layout_width="303dp"
					android:layout_height="7dp" />


				<RelativeLayout android:id="@+id/home_filled"
					android:layout_marginTop="750dp"
					android:layout_marginStart="54dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button
						android:id="@+id/bHome"
						android:layout_width="58dp"
						android:layout_height="58dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:contentDescription="bHome"
						android:background="@drawable/vector_ek4" />

					<ImageView
						android:id="@+id/vector_ek5"
						android:layout_width="38.67dp"
						android:layout_height="43.5dp"
						android:layout_marginStart="9.67dp"
						android:layout_marginTop="7.25dp"
						android:contentDescription="vector_ek5"
						android:src="@drawable/vector_ek5" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/calendar_today_ek1"
					android:layout_marginTop="753dp"
					android:layout_marginStart="180dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek6"
						android:src="@drawable/vector_ek6"
						android:contentDescription="vector_ek6"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="51dp"
						android:layout_height="51dp" />

					<Button
						android:id="@+id/bDashboard"
						android:layout_width="42.5dp"
						android:layout_height="46.75dp"
						android:layout_marginStart="4.25dp"
						android:layout_marginTop="2.13dp"
						android:contentDescription="bDashboard"
						android:background="@drawable/vector_ek7" />


				</RelativeLayout>


				<RelativeLayout android:id="@+id/person"
					android:layout_marginTop="750dp"
					android:layout_marginStart="299dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek8"
						android:src="@drawable/vector_ek8"
						android:contentDescription="vector_ek8"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="58dp"
						android:layout_height="58dp" />

					<Button
						android:id="@+id/bProf"
						android:layout_width="38.67dp"
						android:layout_height="38.67dp"
						android:layout_marginStart="9.67dp"
						android:layout_marginTop="9.67dp"
						android:contentDescription="vector_ek9"
						android:background="@drawable/vector_ek9" />

				</RelativeLayout>


				<TextView
					android:id="@+id/overallDate"
					android:layout_width="329dp"
					android:layout_height="87dp"
					android:layout_marginLeft="52dp"
					android:layout_marginTop="26dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:textColor="@color/wtm_color"
					android:textSize="42sp"
					android:textStyle="bold" />

				<View android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="125dp"
					android:layout_width="302dp"
					android:layout_height="80dp" />

				<View
					android:id="@+id/rectangle_5"
					android:layout_width="302dp"
					android:layout_height="80dp"
					android:layout_marginStart="55dp"
					android:layout_marginTop="269dp"
					android:background="@drawable/rectangle_5_shape" />

				<TextView
					android:id="@+id/_9_00_am2"
					android:layout_width="136dp"
					android:layout_height="40dp"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="232dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="@string/_9_00_am_string"
					android:textColor="@color/_9_00_am_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<View android:id="@+id/rectangle_6"
					android:background="@drawable/rectangle_6_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="355dp"
					android:layout_width="302dp"
					android:layout_height="80dp" />

				<View android:id="@+id/rectangle_7"
					android:background="@drawable/rectangle_7_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="473dp"
					android:layout_width="302dp"
					android:layout_height="80dp" />

				<View android:id="@+id/rectangle_8"
					android:background="@drawable/rectangle_8_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="596dp"
					android:layout_width="302dp"
					android:layout_height="80dp" />

				<TextView
					android:id="@+id/eotd___gt_hackathon"
					android:layout_width="267dp"
					android:layout_height="53dp"
					android:layout_marginLeft="79dp"
					android:layout_marginTop="131dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="Georgia Tech"
					android:textColor="@color/what_s_the_move__color"
					android:textSize="24sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/all_day"
					android:layout_width="95dp"
					android:layout_height="43dp"
					android:layout_marginLeft="79dp"
					android:layout_marginTop="165dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="@string/all_day_string"
					android:textColor="@color/rectangle_2_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/_9_00_am"
					android:layout_width="136dp"
					android:layout_height="40dp"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="232dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="@string/_9_00_am_string"
					android:textColor="@color/_9_00_am_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView android:id="@+id/_10_00_am"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/_9_00_am_color"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="441dp"
					android:layout_width="136dp"
					android:layout_height="40dp"
					android:text="@string/_10_00_am_string"
					 />

				<TextView android:id="@+id/_11_00_am"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/_9_00_am_color"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="559dp"
					android:layout_width="136dp"
					android:layout_height="40dp"
					android:text="@string/_11_00_am_string"
					 />

				<TextView
					android:id="@+id/klaus_building"
					android:layout_width="154dp"
					android:layout_height="43dp"
					android:layout_marginLeft="197dp"
					android:layout_marginTop="165dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="Campus Events"
					android:textColor="@color/rectangle_2_color"
					android:textSize="20sp"
					android:textStyle="bold" />


				<RelativeLayout android:id="@+id/circle"
					android:layout_marginTop="178dp"
					android:layout_marginStart="176dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek10"
						android:src="@drawable/vector_ek10"
						android:contentDescription="vector_ek10"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="4dp"
						android:layout_height="4dp" />

					<ImageView android:id="@+id/vector_ek11"
						android:src="@drawable/vector_ek11"
						android:contentDescription="vector_ek11"
						 android:layout_marginStart="0.33dp"
						android:layout_marginTop="0.33dp"
						android:layout_width="3.33dp"
						android:layout_height="3.33dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/android_ek1"
					android:layout_marginTop="706dp"
					android:layout_marginStart="313dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector_ek12"
							android:src="@drawable/vector_ek12"
							android:contentDescription="vector_ek12"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="34dp"
							android:layout_height="34dp" />

						<ImageView android:id="@+id/vector_ek13"
							android:src="@drawable/vector_ek13"
							android:contentDescription="vector_ek13"
							 android:layout_marginStart="1dp"
							android:layout_marginTop="8dp"
							android:layout_width="31.17dp"
							android:layout_height="17.88dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>