<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		hackgt_8___wtm
	 *	@date 		1635025335591
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_2_xl___4" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >





			<RelativeLayout android:id="@+id/page_google_pixel_2_xl___4_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__google_pixel_2_xl___4_ek2"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__google_pixel_2_xl___4_ek2_shape" />

				<View android:id="@+id/rectangle_2_ek3"
					android:background="@drawable/rectangle_2_ek3_shape"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="730dp"
					android:layout_width="303dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_10"
					android:background="@drawable/rectangle_10_shape"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="437dp"
					android:layout_width="303dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_3_ek3"
					android:background="@drawable/rectangle_3_ek3_shape"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="94dp"
					android:layout_width="303dp"
					android:layout_height="7dp" />


				<RelativeLayout android:id="@+id/home_filled_ek2"
					android:layout_marginTop="747dp"
					android:layout_marginStart="57dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek22"
						android:src="@drawable/vector_ek22"
						android:contentDescription="vector_ek22"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="58dp"
						android:layout_height="58dp" />

					<Button
						android:id="@+id/bHome"
						android:layout_width="38.67dp"
						android:layout_height="43.5dp"
						android:layout_marginStart="9.67dp"
						android:layout_marginTop="7.25dp"
						android:background="@drawable/vector_ek23"
						android:contentDescription="bHome" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/calendar_today_ek3"
					android:layout_marginTop="750dp"
					android:layout_marginStart="183dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button android:id="@+id/bDashboard"
						android:background="@drawable/vector_ek24"
						android:contentDescription="bDashboard"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="51dp"
						android:layout_height="51dp" />

					<ImageView
						android:id="@+id/vector_ek25"
						android:layout_width="42.5dp"
						android:layout_height="46.75dp"
						android:layout_marginStart="4.25dp"
						android:layout_marginTop="2.13dp"
						android:contentDescription="vector_ek25"
						android:src="@drawable/vector_ek25" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/person_ek2"
					android:layout_marginTop="747dp"
					android:layout_marginStart="302dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek26"
						android:src="@drawable/vector_ek26"
						android:contentDescription="vector_ek26"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="58dp"
						android:layout_height="58dp" />

					<Button
						android:id="@+id/bProf"
						android:layout_width="38.67dp"
						android:layout_height="38.67dp"
						android:layout_marginStart="9.67dp"
						android:layout_marginTop="9.67dp"
						android:contentDescription="bProf"
						android:background="@drawable/vector_ek27" />

				</RelativeLayout>

				<TextView
					android:id="@+id/sunday__10_23_ek2"
					android:layout_width="329dp"
					android:layout_height="87dp"
					android:layout_marginLeft="55dp"
					android:layout_marginTop="23dp"
					android:fontFamily="Rounded Mplus 1c Bold"
					android:text="@string/sunday__10_23_ek2_string"
					android:textColor="@color/wtm_color"
					android:textSize="42sp"
					android:textStyle="bold" />


				<RelativeLayout android:id="@+id/android_ek3"
					android:layout_marginTop="703dp"
					android:layout_marginStart="316dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_ek3"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector_ek28"
							android:src="@drawable/vector_ek28"
							android:contentDescription="vector_ek28"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="34dp"
							android:layout_height="34dp" />

						<ImageView android:id="@+id/vector_ek29"
							android:src="@drawable/vector_ek29"
							android:contentDescription="vector_ek29"
							 android:layout_marginStart="1dp"
							android:layout_marginTop="8dp"
							android:layout_width="31.17dp"
							android:layout_height="17.88dp" />

					</RelativeLayout>

				</RelativeLayout>

				<View android:id="@+id/ellipse_1"
					android:background="@drawable/ellipse_1_shape"
					 android:layout_marginStart="88dp"
					android:layout_marginTop="129dp"
					android:layout_width="243dp"
					android:layout_height="243dp" />


				<RelativeLayout android:id="@+id/person_ek3"
					android:layout_marginTop="143dp"
					android:layout_marginStart="108dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek30"
						android:src="@drawable/vector_ek30"
						android:contentDescription="vector_ek30"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="207dp"
						android:layout_height="207dp" />

					<ImageView android:id="@+id/vector_ek31"
						android:src="@drawable/vector_ek31"
						android:contentDescription="vector_ek31"
						 android:layout_marginStart="34.5dp"
						android:layout_marginTop="34.5dp"
						android:layout_width="138dp"
						android:layout_height="138dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_1"
					android:layout_marginTop="385dp"
					android:layout_marginStart="121dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_7_ek2"
						android:background="@drawable/rectangle_7_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="3dp"
						android:layout_width="181dp"
						android:layout_height="27dp" />


					<Button
						android:id="@+id/log_in"
						android:layout_width="175dp"
						android:layout_height="44dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:fontFamily="Rounded Mplus 1c Bold"
						android:text="Log in!"
						android:textColor="@color/log_in_color"
						android:textSize="20sp"
						android:textStyle="bold" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_2"
					android:layout_marginTop="458dp"
					android:layout_marginStart="121dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_8_ek2"
						android:background="@drawable/rectangle_8_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="3dp"
						android:layout_width="181dp"
						android:layout_height="27dp" />

					<TextView
						android:id="@+id/my_friends"
						android:layout_width="122dp"
						android:layout_height="44dp"
						android:layout_marginLeft="37dp"
						android:layout_marginTop="0dp"
						android:fontFamily="Rounded Mplus 1c Bold"
						android:text="@string/my_friends_string"
						android:textColor="@color/log_in_color"
						android:textSize="20sp"
						android:textStyle="bold" />

				</RelativeLayout>
				<!-- person one -->
				<TextView
					android:id="@+id/friend1"
					android:layout_width="264dp"
					android:layout_height="51dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="493dp"
					android:background="@drawable/rectangle_6_shape"></TextView>

				<View
					android:id="@+id/rectangle_7_ek3"
					android:layout_width="264dp"
					android:layout_height="51dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="493dp" />
				<!-- person two -->


				<TextView
					android:id="@+id/friend2"
					android:layout_width="264dp"
					android:layout_height="49dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="548dp"
					android:background="@drawable/rectangle_7_shape"></TextView>

				<View
					android:id="@+id/rectangle_8_ek"
					android:layout_width="264dp"
					android:layout_height="49dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="548dp" />
				<!-- person 3 -->
				<TextView
					android:id="@+id/friend3"
					android:layout_width="264dp"
					android:layout_height="51dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="601dp"
					android:background="@drawable/rectangle_8_shape"></TextView>

				<View
					android:id="@+id/rectangle_9"
					android:layout_width="264dp"
					android:layout_height="51dp"
					android:layout_marginStart="80dp"
					android:layout_marginTop="601dp" />


				<RelativeLayout android:id="@+id/group_6"
					android:layout_marginTop="656dp"
					android:layout_marginStart="121dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_5"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_3"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/rectangle_8_ek4"
								android:background="@drawable/rectangle_8_ek4_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="2dp"
								android:layout_width="181dp"
								android:layout_height="27dp" />

							<TextView android:id="@+id/search"
								android:fontFamily="Rounded Mplus 1c Bold"
								android:textStyle="bold"
								android:textSize="20sp"
								android:textColor="@color/search_color"
								android:layout_marginLeft="76dp"
								android:layout_marginTop="0dp"
								android:layout_width="81dp"
								android:layout_height="44dp"
								android:text="@string/search_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/search_ek1"
						android:layout_marginTop="3dp"
						android:layout_marginStart="40dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector_ek32"
							android:src="@drawable/vector_ek32"
							android:contentDescription="vector_ek32"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="26dp"
							android:layout_height="26dp" />

						<ImageView android:id="@+id/vector_ek33"
							android:src="@drawable/vector_ek33"
							android:contentDescription="vector_ek33"
							 android:layout_marginStart="3.25dp"
							android:layout_marginTop="3.25dp"
							android:layout_width="18.95dp"
							android:layout_height="18.95dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>